--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="A product of emergent.sh" />
+        <meta name="description" content="A product of TECH TALK TITANS" />
         <!--
         manifest.json provides metadata used when your web app is installed on a
         user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -18,10 +18,10 @@
         work correctly both with client-side routing and a non-root public URL.
         Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>Emergent | Fullstack App</title>
+        <title>DIAL PRO | By TECH TALK TITANS</title>
         <!-- Twilio Voice SDK v2.16.0 for Voice Calls -->
         <script src="https://unpkg.com/@twilio/voice-sdk@2.16.0/dist/twilio.min.js"></script>
-        <script src="https://assets.emergent.sh/scripts/emergent-main.js"></script>
+
         <!--
         These two scripts have been added for the Visual Edits, please do not edit or remove them
         -->
@@ -30,7 +30,6 @@
             if (window.self !== window.top) {
                 // Load debug monitor script
                 var debugMonitorScript = document.createElement('script');
-                debugMonitorScript.src = 'https://assets.emergent.sh/scripts/debug-monitor.js';
                 document.head.appendChild(debugMonitorScript);
 
                 // Configure Tailwind
@@ -60,9 +59,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
         <a
-            id="emergent-badge"
+            id="techtalktitans-badge"
             target="_blank"
-            href="https://app.emergent.sh/?utm_source=emergent-badge"
+            href="https://techtalktitans.co.in"
             style="
                 display: flex !important;
                 align-items: center !important;
@@ -102,7 +101,7 @@
                         margin-bottom: 0;
                     "
                 >
-                    Made with Emergent
+                    Made TECH TALK TITANS
                 </p>
             </div>
         </a>
