--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -89,9 +89,11 @@
                 style="display: flex; flex-direction: row; align-items: center"
             >
                 <img
-                    style="width: 20px; height: 20px; margin-right: 8px"
-                    src="https://avatars.githubusercontent.com/in/1201222?s=120&u=2686cf91179bbafbc7a71bfbc43004cf9ae1acea&v=4"
+                  src="%PUBLIC_URL%/techtalktitans-logo.png"
+                  alt="Tech Talk Titans"
+                  style="width: 20px; height: 20px; margin-right: 8px"
                 />
+
                 <p
                     style="
                         color: #000000;
@@ -104,7 +106,7 @@
                         margin-bottom: 0;
                     "
                 >
-                    Made TECH TALK TITANS
+                    Made by TECH TALK TITANS
                 </p>
             </div>
         </a>
